--- a/style.css
+++ b/style.css
@@ -28,13 +28,22 @@ table, th, td {
 ::placeholder{
     color: black;
 }
+#inputContainer{
+  display: inline-block;
+  position: relative;
+  overflow: hidden;}
 #submit{
-    font-size: 30px;
-    border: none;
-    background-color: transparent;
+  position: absolute;
+  border: none;
+  cursor:pointer;
+  background-color: transparent;
+  top: 43%;
+  right: 0px;
+  transform: translate(0, -50%);
 }
+
 #submit:hover{
-    scale: 1.5;
+    scale: 1.3;
 }
 #delRowBtn{
     background-color: transparent;
