--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-*{
-    min-width: fit-content;
-}
 table{
     width: 100%;
 }
@@ -34,13 +31,17 @@ table, th, td {
 #inputContainer{
   position: relative;
 }
+input {
+    width: 100%;
+    height: 20px;
+    border: none;
+    border-bottom: 1px solid;
+}
 #submit{
-  position: absolute;
   border: none;
   cursor:pointer;
   background-color: transparent;
-  transform: translate(0, -50%);
-  top: 50%;
+  right: 0px;
   z-index: 1;
 }
 
