--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ input {
 #submit:hover{
     scale: 1.3;
 }
+#saveLog{
+    text-decoration: none;
+}
 #delRowBtn{
     background-color: transparent;
     border: none;
