--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ table, th, td {
     text-align: center;
     padding: 5px;
 }
-.headerOne, #inputHeaderOne {
+.headerOne, #client, .infoHeader {
     background-color: rgb(128, 115, 115);
     font-size: 25px;
     font-weight: bold;
@@ -40,12 +40,12 @@ input {
     border: none;
     border-bottom: 1px solid;
 }
-#submit, #companyBtn{
+#submit, #inputCompanyContainerBtn{
   cursor:pointer;
   background-color: transparent;
   z-index: 1;
 }
-#submit:hover, #companyBtn:hover{
+#submit:hover, #inputCompanyContainerBtn:hover{
     scale: 1.3;
 }
 #deleteLog{
